...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="?attr/colorOnPrimary">

    <EditText
        android:id="@+id/hours"
        android:layout_width="93dp"
        android:layout_height="84dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="76dp"
...
        android:textColor="?attr/colorOnSecondary"
        android:textColorHint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary"
        />

    <EditText
        android:id="@+id/minutes"
        android:layout_width="93dp"
        android:layout_height="84dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="65dp"
...
        android:textColorHint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary"
        />


    <EditText
        android:id="@+id/name_text_box"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="240dp"
...
<!--        android:clickable="true"-->
<!--        android:textColor="@color/grey"-->
<!--       />-->


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="346dp"
        android:text="Cancel" />

    <Button
        android:id="@+id/submitbutton"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="346dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:color="@color/button_background"
        android:text="Add" />


    <TextView
        android:id="@+id/colon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
